--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   },
   "dependencies": {
     "react": "16.8.3",
-    "react-native": "0.59.10"
+    "react-native": "^0.59.9"
   },
   "devDependencies": {
     "@babel/core": "7.6.4",
     "@babel/runtime": "7.6.3",
+    "babel-eslint": "^10.0.3",
     "babel-jest": "24.9.0",
+    "babel-plugin-module-resolver": "^3.2.0",
     "eslint": "^6.5.1",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "^2.18.2",
@@ -22,6 +24,7 @@
     "eslint-plugin-react-hooks": "^1.7.0",
     "jest": "24.9.0",
     "metro-react-native-babel-preset": "0.56.0",
+    "react-native-dotenv": "^0.2.0",
     "react-test-renderer": "16.8.3"
   },
   "jest": {
