--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "deep-freeze": "0.0.1",
+    "query-string": "^6.8.3",
     "react": "16.8.3",
     "react-native": "^0.59.9"
   },
