--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "deep-freeze": "0.0.1",
     "query-string": "^6.8.3",
     "react": "16.8.3",
-    "react-native": "^0.59.9"
+    "react-native": "^0.59.9",
+    "react-native-gesture-handler": "^1.4.1",
+    "react-native-reanimated": "^1.3.0",
+    "react-native-screens": "^2.0.0-alpha.5",
+    "react-navigation": "^4.0.10"
   },
   "devDependencies": {
     "@babel/core": "7.6.4",
@@ -25,6 +29,7 @@
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-react-hooks": "^1.7.0",
     "jest": "24.9.0",
+    "jetifier": "^1.6.4",
     "metro-react-native-babel-preset": "0.56.0",
     "react-native-dotenv": "^0.2.0",
     "react-test-renderer": "16.8.3"
