--- a/package.json
+++ b/package.json
@@ -4,9 +4,15 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "test": "jest",
+    "lint": "node ./scripts/lint.js",
+    "fix": "FIX=1 node ./scripts/lint.js"
   },
+  "pre-commit": [
+    "lint"
+  ],
   "dependencies": {
+    "chalk": "^2.4.2",
     "deep-freeze": "0.0.1",
     "query-string": "^6.8.3",
     "react": "16.8.3",
@@ -31,6 +37,7 @@
     "jest": "24.9.0",
     "jetifier": "^1.6.4",
     "metro-react-native-babel-preset": "0.56.0",
+    "pre-commit": "^1.2.2",
     "react-native-dotenv": "^0.2.0",
     "react-test-renderer": "16.8.3"
   },
