--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "react-native-gesture-handler": "^1.4.1",
     "react-native-reanimated": "^1.3.0",
     "react-native-screens": "^2.0.0-alpha.5",
-    "react-navigation": "^4.0.10"
+    "react-navigation": "^4.0.10",
+    "react-redux": "^7.1.1",
+    "redux": "^4.0.4",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "7.6.4",
