--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "react": "16.8.3",
     "react-native": "^0.59.9",
     "react-native-gesture-handler": "^1.4.1",
+    "react-native-paper": "^3.0.0",
     "react-native-reanimated": "^1.3.0",
     "react-native-screens": "^2.0.0-alpha.5",
-    "react-navigation": "^4.0.10",
+    "react-native-vector-icons": "^6.6.0",
+    "react-navigation": "^3.11.0",
+    "react-navigation-material-bottom-tabs": "^2.1.3",
     "react-redux": "^7.1.1",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
