--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint"
   ],
   "dependencies": {
+    "@react-native-community/async-storage": "^1.6.3",
     "chalk": "^2.4.2",
     "deep-freeze": "0.0.1",
     "query-string": "^6.8.3",
