--- a/package.json
+++ b/package.json
@@ -13,44 +13,44 @@
     "lint"
   ],
   "dependencies": {
-    "@react-native-community/async-storage": "^1.6.3",
-    "chalk": "^2.4.2",
+    "@react-native-community/async-storage": "1.6.3",
+    "chalk": "2.4.2",
     "deep-freeze": "0.0.1",
-    "moment": "^2.24.0",
-    "query-string": "^6.8.3",
+    "moment": "2.24.0",
+    "query-string": "6.8.3",
     "react": "16.8.3",
-    "react-native": "^0.59.9",
-    "react-native-camera": "^3.14.0",
-    "react-native-gesture-handler": "^1.4.1",
-    "react-native-maps": "^0.26.1",
-    "react-native-paper": "^3.0.0",
-    "react-native-reanimated": "^1.3.0",
-    "react-native-screens": "^2.0.0-alpha.5",
-    "react-native-vector-icons": "^6.6.0",
-    "react-navigation": "^3.11.0",
-    "react-navigation-material-bottom-tabs": "^2.1.3",
-    "react-redux": "^7.1.1",
-    "redux": "^4.0.4",
-    "redux-devtools-extension": "^2.13.8",
-    "redux-thunk": "^2.3.0"
+    "react-native": "0.59.9",
+    "react-native-camera": "3.14.0",
+    "react-native-gesture-handler": "1.4.1",
+    "react-native-maps": "0.26.1",
+    "react-native-paper": "3.0.0",
+    "react-native-reanimated": "1.3.0",
+    "react-native-screens": "2.0.0-alpha.5",
+    "react-native-vector-icons": "6.6.0",
+    "react-navigation": "3.11.0",
+    "react-navigation-material-bottom-tabs": "2.1.3",
+    "react-redux": "7.1.1",
+    "redux": "4.0.4",
+    "redux-devtools-extension": "2.13.8",
+    "redux-thunk": "2.3.0"
   },
   "devDependencies": {
     "@babel/core": "7.6.4",
     "@babel/runtime": "7.6.3",
-    "babel-eslint": "^10.0.3",
+    "babel-eslint": "10.0.3",
     "babel-jest": "24.9.0",
-    "babel-plugin-module-resolver": "^3.2.0",
-    "eslint": "^6.5.1",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.16.0",
-    "eslint-plugin-react-hooks": "^1.7.0",
+    "babel-plugin-module-resolver": "3.2.0",
+    "eslint": "6.5.1",
+    "eslint-config-airbnb": "18.0.1",
+    "eslint-plugin-import": "2.18.2",
+    "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-react": "7.16.0",
+    "eslint-plugin-react-hooks": "1.7.0",
     "jest": "24.9.0",
-    "jetifier": "^1.6.4",
+    "jetifier": "1.6.4",
     "metro-react-native-babel-preset": "0.56.0",
-    "pre-commit": "^1.2.2",
-    "react-native-dotenv": "^0.2.0",
+    "pre-commit": "1.2.2",
+    "react-native-dotenv": "0.2.0",
     "react-test-renderer": "16.8.3"
   },
   "jest": {
