fix: match guests list API + built .apk file

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -18,3 +18,7 @@
 # org.gradle.parallel=true
 android.useAndroidX=true
 android.enableJetifier=true
+MYAPP_RELEASE_STORE_FILE=mykeystore.keystore
+MYAPP_RELEASE_KEY_ALIAS=mykeyalias
+MYAPP_RELEASE_STORE_PASSWORD=08051998
+MYAPP_RELEASE_KEY_PASSWORD=08051998
